# OzonTracking

./: .gitignore
.github/workflows/: ci.yml  main.yml
client/: index.html  main.js
client/src/: main.scss  main.tsx
client/src/entity/ArrivalControlTable/: table.module.scss  table.tsx
client/src/entity/GoodsTable/: Table.module.scss  Table.tsx
client/src/entity/routes/: routes.tsx
client/src/entity/table/: table.module.scss  table.tsx
client/src/pages/ErrorPage/: ErrorPage.module.scss  ErrorPage.tsx
client/src/pages/GoodsPage/: GoodsPage.tsx
client/src/pages/LoginPage/: LoginPage.tsx
client/src/pages/MainPage/: MainPage.module.scss  MainPage.tsx
client/src/pages/ProfilePage/: ProfilePage.module.scss  ProfilePage.tsx
client/src/pages/RegistrationPage/: RegistrationPage.tsx
client/src/shared/Auth/: AuthPage.module.scss  AuthPage.tsx
client/src/widgets/LeftNavbar/: LeftNavbar.module.scss  LeftNavbar.tsx
client/src/widgets/Navbar/: Navbar.module.scss  Navbar.tsx
server/: core.py  database.py  main.py  models.py  pyproject.toml  requirements.txt
server/alembic/: env.py
server/alembic/versions/: 2024_07_25_1514-e0552222c637_create_tables.py  2024_07_29_0108-d7894389b014_модель_фильтров.py
server/app/: main.py
server/app/api/endpoints/: example.py
server/app/api/schemas/: example.py
server/app/config/database/: db_config.py  db_session.py
server/app/db/: functions.py  models.py
server/tests/: test_endpoints.py
