[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Yura <borzikovu32@gmail.com>", "Roman <offissit123321@gmail.com>"]
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
sqlalchemy = "^2.0.31"
flake8 = "^7.1.0"
mypy = "^1.10.1"
black = "^24.4.2"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pydantic-settings = "^2.3.3"
psycopg = "^3.2.1"
psycopg-binary = "^3.2.1"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
